--- a/css/screen.css
+++ b/css/screen.css
@@ -1,337 +1,547 @@
 html {
-	background-color: #608699;
-	line-height: 1.7;
+  /* background-color: #608699; */
+  line-height: 1.7;
 }
 
 body {
-	font-size: 1.2rem;
-	margin: 0;
-	padding: 0;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  color: #3b454a;
 }
 
 h1 {
   font-size: 3rem;
 }
 
+h4 {
+  line-height: 2;
+  font-weight: 400;
+}
+
+.art {
+  color:#92deed;
+  margin-left: .25rem;
+}
+
 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none!important;
+  font-size: 2rem;
+  color: #04636d;
 }
 
-/* Main Column Typography */
+a:hover {
+  color: #6fbecd;
+}
+
+.title {
+  background-color:#228a9f;
+  margin-bottom: 2rem;
+}
+
+.title a {
+  color: white;
+}
+
+.about {
+  background-color: #fff2e0;
+  line-height: 1.8;
+}
+
+.email {
+  background-color: #feb568;
+}
+
+.email a {
+  color: white;
+}
+
+.email a:hover {
+  color: #ffdd95;
+}
+
+.saatchi {
+  background-color: #ce6c6c;
+}
+
+.saatchi a {
+  color: white;
+}
+
+.saatchi a:hover {
+  color:#e68998;
+}
+
+.insta {
+  background-color: #2fb2c1;
+}
+
+.insta a {
+  color: white;
+}
+
+.insta a:hover {
+  color: #96e4f4;
+}
+
 .main-area h2 {
-	font-size: 165%;
-	font-weight: normal;
+  font-size: 165%;
+  font-weight: normal;
 }
 
 .section {
-	padding-left: 40px;
-	padding-right: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .container {
-	max-width: 960px;
-	margin: 0 auto;
-	overflow: hidden;
+  max-width: 960px;
+  margin: 0 auto;
+  overflow: hidden;
 }
 
 @media screen and (min-width: 1280px) {
-	
-	body {
-		font-size: 1.2rem;
-	}
-	
-	.container {
-		max-width: 1200px;
-	}
-	
+
+  body {
+    font-size: 1.2rem;
+  }
+
 }
 
 @media screen and (max-width: 767px) {
-	
-	.section {
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	
+
+  .section {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .art {
+    display: none;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
 }
 
 header h1 {
-	margin: 0;
-	font-weight: bold;
-  font-size: 300%;
+  margin: 0;
+  font-weight: bold;
   font-family: 'Lato';
 }
 
 header p {
-	font-size: 90%;
-	margin: 0;
+  font-size: 90%;
+  margin: 0;
 }
 
 /* Site Navigation */
 .site-nav {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .site-nav ul {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .site-nav li {
-	list-style: none;
-	float: left;
-	margin-right: 5px;
+  list-style: none;
+  float: left;
+  margin-right: 5px;
 }
 
 .site-nav a {
-	display: block;
-	color: #FFF;
-	padding: 10px 20px;
-	background-color: #365267;
-	transition-property: color, background-color;
-	transition-duration: 2s;
+  display: block;
+  color: #FFF;
+  padding: 10px 20px;
+  background-color: #365267;
+  transition-property: color, background-color;
+  transition-duration: 2s;
 }
 
 .site-nav a:hover {
-	background-color: #FFF;
-	color: #2c465a;
+  background-color: #FFF;
+  color: #2c465a;
 }
 
 @media screen and (max-width: 1023px) {
-	
-	.site-nav li {
-		width: 33.332%;
-		margin-right: 0;
-	}
-	
-	.site-nav a {
-		padding: 15px 0;
-		margin-right: 5px;
-		margin-bottom: 5px;
-		text-align: center;
-	}
-	
+
+  .site-nav li {
+    width: 33.332%;
+    margin-right: 0;
+  }
+
+  .site-nav a {
+    padding: 15px 0;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+  }
+
 }
 
 @media screen and (max-width: 767px) {
-	
-	.site-nav li {
-		width: 50%;
-	}
-	
+
+  .site-nav li {
+    width: 50%;
+  }
+
 }
-
-
 
 /* End Site Navigation */
 
-
 .content-area {
-	background-color: #FFF;
-	padding-bottom: 40px;
-	padding-top: 40px;
+  background-color: #FFF;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 
 @media screen and (max-width: 767px) {
-	.content-area {
-		padding-top: 20px;
-	}
+  .content-area {
+    padding-top: 20px;
+  }
 }
 
 .main-area {
-	width: 66%;
-	float: left;
-	padding-right: 40px;
-	box-sizing: border-box;
-}
-
-.sidebar {
-	color: #555;
-	font-size: 85%;
-}
-
-.sidebar h3 {
-	font-size: 138.5%;
-	margin-bottom: 7px;
+  width: 66%;
+  float: left;
+  padding-right: 40px;
+  box-sizing: border-box;
 }
 
 .info-box {
-	background-color: #efeedb;
-	border: 5px solid #e6e5c2;
-	padding: 20px 40px 7px 40px;
-	margin-bottom: 1em;
+  background-color: #efeedb;
+  border: 5px solid #e6e5c2;
+  padding: 20px 40px 7px 40px;
+  margin-bottom: 1em;
 }
 
 @media screen and (max-width: 767px) {
-	
-	.hide-small {
-		display: none;
-	}
-	
-}
 
+  .hide-small {
+    display: none;
+  }
+
+}
 
 /* Thumbnail Styles */
 .thumbnails {
-	margin-right: -15px;
+  margin-right: -15px;
 }
 
 .thumbnails a {
-	float: left;
-	width: 25%;
-	box-sizing: border-box;
-	padding-right: 15px;
-	margin-bottom: 15px;
+  float: left;
+  width: 33.3%;
+  box-sizing: border-box;
+  padding: .8rem 1rem;
+  /* padding-right: 15px;
+	margin-bottom: 15px; */
+}
+
+.thumbnails.improv a {
+  float: left;
+  width: 50%;
+  box-sizing: border-box;
+  padding: .65rem 1rem;
+  /* margin-bottom: 15px; */
 }
 
 .thumbnails img {
-	width: 100%;
-	height: auto;
-	display: block;
-	transition: all .2s ease-in-out;
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: all .2s ease-in-out;
 }
 
 .thumbnails:hover img {
-	opacity: .6;
-	transform: scale(.92);
+  opacity: .6;
+  transform: scale(.96);
 }
 
 .thumbnails:hover img:hover {
-	opacity: 1;
-	transform: scale(1) rotate(1deg);
-	box-shadow: 0 0 7px rgba(0, 0, 0, .5);
+  opacity: 1;
+  /* transform: scale(1) rotate(1deg); */
+  box-shadow: 0 0 7px rgba(0, 0, 0, .5);
 }
 
-@media screen and (max-width: 767px) {
-	
-	.thumbnails a {
-		width: 50%;
-	}
-	
+@media screen and (max-width: 770px) {
+
+  .thumbnails a {
+    width: 100%;
+  }
+
+  .thumbnails.improv a {
+    width: 100%;
+    padding: 5%;
+  }
+
 }
 
+@media screen and (min-width:500px) and (max-width:770px) {
+  .thumbnails a {
+    width: 50%;
+    padding: 2%;
+  }
+}
 
+@media screen and (max-width: 499px) {
+
+  .thumbnails a {
+    width: 100%;
+    padding: 5%;
+  }
+
+}
 
 /* Grid */
 .row {
-	margin-right: -20px;
+  margin-right: -20px;
 }
 
 .col {
-	width: 100%;
-	float: left;
-	padding-right: 20px;
-	box-sizing: border-box;
+  width: 100%;
+  float: left;
+  padding-right: 20px;
+  box-sizing: border-box;
 }
 
-.col-xs-11 {width: 91.662%}
-.col-xs-10 {width: 83.332%;}
-.col-xs-9 {width: 75%;}
-.col-xs-8 {width: 66.662%;}
-.col-xs-7 {width: 58.331%}
-.col-xs-6 {width: 50%;}
-.col-xs-5 {width: 41.662%}
-.col-xs-4 {width: 33.332%;}
-.col-xs-3 {width: 25%;}
-.col-xs-2 {width: 16.662%;}
-.col-xs-1 {width: 8.332%;}
+.col-xs-11 {
+  width: 91.662%
+}
+
+.col-xs-10 {
+  width: 83.332%;
+}
+
+.col-xs-9 {
+  width: 75%;
+}
+
+.col-xs-8 {
+  width: 66.662%;
+}
+
+.col-xs-7 {
+  width: 58.331%
+}
+
+.col-xs-6 {
+  width: 50%;
+}
+
+.col-xs-5 {
+  width: 41.662%
+}
+
+.col-xs-4 {
+  width: 33.332%;
+}
+
+.col-xs-3 {
+  width: 25%;
+}
+
+.col-xs-2 {
+  width: 16.662%;
+}
+
+.col-xs-1 {
+  width: 8.332%;
+}
 
 @media screen and (min-width: 768px) {
-	
-	.row {
-		margin-right: -40px;
-	}
-	
-	.col {
-		padding-right: 40px;
-	}
-		
-	.col-sm-11 {width: 91.662%}
-	.col-sm-10 {width: 83.332%;}
-	.col-sm-9 {width: 75%;}
-	.col-sm-8 {width: 66.662%;}
-	.col-sm-7 {width: 58.331%}
-	.col-sm-6 {width: 50%;}
-	.col-sm-5 {width: 41.662%}
-	.col-sm-4 {width: 33.332%;}
-	.col-sm-3 {width: 25%;}
-	.col-sm-2 {width: 16.662%;}
-	.col-sm-1 {width: 8.332%;}
-	
+
+  .row {
+    margin-right: -40px;
+  }
+
+  .col {
+    padding-right: 40px;
+  }
+
+  .col-sm-11 {
+    width: 91.662%
+  }
+
+  .col-sm-10 {
+    width: 83.332%;
+  }
+
+  .col-sm-9 {
+    width: 75%;
+  }
+
+  .col-sm-8 {
+    width: 66.662%;
+  }
+
+  .col-sm-7 {
+    width: 58.331%
+  }
+
+  .col-sm-6 {
+    width: 50%;
+  }
+
+  .col-sm-5 {
+    width: 41.662%
+  }
+
+  .col-sm-4 {
+    width: 33.332%;
+  }
+
+  .col-sm-3 {
+    width: 25%;
+  }
+
+  .col-sm-2 {
+    width: 16.662%;
+  }
+
+  .col-sm-1 {
+    width: 8.332%;
+  }
+
 }
 
 @media screen and (min-width: 1024px) {
-	
-	.col-md-11 {width: 91.662%}
-	.col-md-10 {width: 83.332%;}
-	.col-md-9 {width: 75%;}
-	.col-md-8 {width: 66.662%;}
-	.col-md-7 {width: 58.331%}
-	.col-md-6 {width: 50%;}
-	.col-md-5 {width: 41.662%}
-	.col-md-4 {width: 33.332%;}
-	.col-md-3 {width: 25%;}
-	.col-md-2 {width: 16.662%;}
-	.col-md-1 {width: 8.332%;}
-	
+
+  .col-md-11 {
+    width: 91.662%
+  }
+
+  .col-md-10 {
+    width: 83.332%;
+  }
+
+  .col-md-9 {
+    width: 75%;
+  }
+
+  .col-md-8 {
+    width: 66.662%;
+  }
+
+  .col-md-7 {
+    width: 58.331%
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
+
+  .col-md-5 {
+    width: 41.662%
+  }
+
+  .col-md-4 {
+    width: 33.332%;
+  }
+
+  .col-md-3 {
+    width: 25%;
+  }
+
+  .col-md-2 {
+    width: 16.662%;
+  }
+
+  .col-md-1 {
+    width: 8.332%;
+  }
+
 }
 
 @media screen and (min-width: 1280px) {
-	
-	.col-lg-11 {width: 91.662%}
-	.col-lg-10 {width: 83.332%;}
-	.col-lg-9 {width: 75%;}
-	.col-lg-8 {width: 66.662%;}
-	.col-lg-7 {width: 58.331%}
-	.col-lg-6 {width: 50%;}
-	.col-lg-5 {width: 41.662%}
-	.col-lg-4 {width: 33.332%;}
-	.col-lg-3 {width: 25%;}
-	.col-lg-2 {width: 16.662%;}
-	.col-lg-1 {width: 8.332%;}
-	
+
+  .col-lg-11 {
+    width: 91.662%
+  }
+
+  .col-lg-10 {
+    width: 83.332%;
+  }
+
+  .col-lg-9 {
+    width: 75%;
+  }
+
+  .col-lg-8 {
+    width: 66.662%;
+  }
+
+  .col-lg-7 {
+    width: 58.331%
+  }
+
+  .col-lg-6 {
+    width: 50%;
+  }
+
+  .col-lg-5 {
+    width: 41.662%
+  }
+
+  .col-lg-4 {
+    width: 33.332%;
+  }
+
+  .col-lg-3 {
+    width: 25%;
+  }
+
+  .col-lg-2 {
+    width: 16.662%;
+  }
+
+  .col-lg-1 {
+    width: 8.332%;
+  }
+
 }
 
 @media screen and (max-width: 1023px) {
-	.push-down-sm {
-		margin-bottom: 30px;
-	}
+  .push-down-sm {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 767px) {
-	.push-down-sm {
-		margin-bottom: 15px;
-	}
+  .push-down-sm {
+    margin-bottom: 15px;
+  }
 }
 
 footer {
-	text-align: center;
-	font-size: 85%;
-  color: #FFF;
-  background-color: #608699;
-	padding-bottom: 20px;
-	padding-top: 20px;
+  text-align: center;
+  font-size: 85%;
+  color: #608699;
+  padding-bottom: 20px;
+  padding-top: 20px;
 }
 
 .row:before,
 .row:after,
 .group:before,
 .group:after {
-	content: "";
-	display: table;
+  content: "";
+  display: table;
 }
 
 .row:after,
 .group:after {
-	clear: both;
+  clear: both;
 }
 
 .row,
 .group {
-	zoom: 1;
+  zoom: 1;
 }
