--- a/css/screen.css
+++ b/css/screen.css
@@ -4,9 +4,7 @@ html {
 }
 
 body {
-  font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
+  font-size: 1.3rem;
   color: #3b454a;
 }
 
@@ -14,14 +12,21 @@ h1 {
   font-size: 3rem;
 }
 
-h4 {
-  line-height: 2;
-  font-weight: 400;
+h2 {
+  line-height: 1.9;
+  font-size: 1.7rem;
+  color: #5f5f60;
+  /* font-family: 'Piazzolla', serif; */
 }
 
-.art {
-  color:#92deed;
-  margin-left: .25rem;
+h4 {
+  line-height: 2;
+    font-size: 1.5rem;
+    color: #04636d;   
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 img {
@@ -31,7 +36,7 @@ img {
 
 a {
   text-decoration: none!important;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #04636d;
 }
 
@@ -39,65 +44,24 @@ a:hover {
   color: #6fbecd;
 }
 
-.title {
+
+/* .title {
   background-color:#228a9f;
   margin-bottom: 2rem;
 }
 
 .title a {
   color: white;
-}
+} */
 
-.about {
-  background-color: #fff2e0;
-  line-height: 1.8;
-}
-
-.email {
-  background-color: #feb568;
-}
-
-.email a {
+#contact a {
   color: white;
 }
 
-.email a:hover {
-  color: #ffdd95;
-}
-
-.saatchi {
-  background-color: #ce6c6c;
-}
-
-.saatchi a {
+#contact a:hover {
   color: white;
 }
 
-.saatchi a:hover {
-  color:#e68998;
-}
-
-.insta {
-  background-color: #2fb2c1;
-}
-
-.insta a {
-  color: white;
-}
-
-.insta a:hover {
-  color: #96e4f4;
-}
-
-.main-area h2 {
-  font-size: 165%;
-  font-weight: normal;
-}
-
-.section {
-  padding-left: 40px;
-  padding-right: 40px;
-}
 
 .container {
   max-width: 960px;
@@ -105,20 +69,46 @@ a:hover {
   overflow: hidden;
 }
 
-@media screen and (min-width: 1280px) {
+/* Navbar */
 
-  body {
-    font-size: 1.2rem;
-  }
+.art {
+  font-size: 2.5rem;
+  color:#dc3545;
+}
 
+.navbar-brand {
+  font-size: 2.5rem;
+  margin-right: .5rem;
+  color: #ffc163!important;
+}
+
+.nav-link {
+  padding-bottom: 0;
+  font-size: 1.75rem;
+}
+
+/* Preludio */
+.pf-bg {
+  background-color:#ffd363;
+}
+
+
+/* video */
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
 
 @media screen and (max-width: 767px) {
-
-  .section {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
 
   .art {
     display: none;
@@ -128,108 +118,21 @@ a:hover {
     font-size: 2.5rem;
   }
 
-}
-
-header h1 {
-  margin: 0;
-  font-weight: bold;
-  font-family: 'Lato';
-}
-
-header p {
-  font-size: 90%;
-  margin: 0;
-}
-
-/* Site Navigation */
-.site-nav {
-  margin-top: 20px;
-}
-
-.site-nav ul {
-  margin: 0;
-  padding: 0;
-}
-
-.site-nav li {
-  list-style: none;
-  float: left;
-  margin-right: 5px;
-}
-
-.site-nav a {
-  display: block;
-  color: #FFF;
-  padding: 10px 20px;
-  background-color: #365267;
-  transition-property: color, background-color;
-  transition-duration: 2s;
-}
-
-.site-nav a:hover {
-  background-color: #FFF;
-  color: #2c465a;
-}
-
-@media screen and (max-width: 1023px) {
-
-  .site-nav li {
-    width: 33.332%;
-    margin-right: 0;
+  h2 {
+    font-size: 1.5rem;
+    padding: 0 1.5%;
   }
 
-  .site-nav a {
-    padding: 15px 0;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    text-align: center;
+  
+  iframe {
+    width: 420px;
+    height: 315px;
   }
 
 }
 
-@media screen and (max-width: 767px) {
+/* Nav */
 
-  .site-nav li {
-    width: 50%;
-  }
-
-}
-
-/* End Site Navigation */
-
-.content-area {
-  background-color: #FFF;
-  padding-bottom: 40px;
-  padding-top: 40px;
-}
-
-@media screen and (max-width: 767px) {
-  .content-area {
-    padding-top: 20px;
-  }
-}
-
-.main-area {
-  width: 66%;
-  float: left;
-  padding-right: 40px;
-  box-sizing: border-box;
-}
-
-.info-box {
-  background-color: #efeedb;
-  border: 5px solid #e6e5c2;
-  padding: 20px 40px 7px 40px;
-  margin-bottom: 1em;
-}
-
-@media screen and (max-width: 767px) {
-
-  .hide-small {
-    display: none;
-  }
-
-}
 
 /* Thumbnail Styles */
 .thumbnails {
@@ -240,16 +143,15 @@ header p {
   float: left;
   width: 33.3%;
   box-sizing: border-box;
-  padding: .8rem 1rem;
-  /* padding-right: 15px;
-	margin-bottom: 15px; */
+  padding-right: 15px;
+	margin-bottom: 15px;
 }
 
 .thumbnails.improv a {
   float: left;
   width: 50%;
   box-sizing: border-box;
-  padding: .65rem 1rem;
+  padding-right: 15px;
   /* margin-bottom: 15px; */
 }
 
@@ -359,7 +261,8 @@ header p {
 @media screen and (min-width: 768px) {
 
   .row {
-    margin-right: -40px;
+    margin-right: -16px;
+    /* margin-right: -40px; */
   }
 
   .col {
@@ -523,9 +426,8 @@ header p {
 footer {
   text-align: center;
   font-size: 85%;
-  color: #608699;
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding: 1rem 0;
+  color: #acacac;
 }
 
 .row:before,
